add step about setting the MAVEN_OPTS